--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,10 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+.idea/inspectionProfiles/
+.idea/misc.xml
+.idea/modules.xml
+.idea/python-examples.iml
+.idea/workspace.xml
+.idea/vcs.xml
